...
    LaunchedEffect(mensaje) {
        if (mensaje != null) {
            avisos.showSnackbar(
                message = mensaje,
                withDismissAction = true,
                duration =
                    if (mensaje == "Cambios guardados") SnackbarDuration.Short
                    else SnackbarDuration.Long,
            )
            consumirActual()
        }
    }
    Scaffold(
...
        floatingActionButton = accionFlotante,
        snackbarHost = {
            SnackbarHost(avisos) { aviso ->
                Snackbar(
                    dismissAction = {
                        IconButton(onClick = aviso::dismiss) {
                            Icon(Icons.Outlined.Close, "Cerrar aviso")
                        }
                    }
                ) {
                    Text(aviso.visuals.message)
                }
            }
...
